# AnyEG

./: CMakeLists.txt  LICENSE  README.md  TTK_LICENSE  cudaHelper.cu  cudaHelper.h  helper_cuda.h  scalarFind.cpp  stopwatch.h  ttk.module  ttkExtremeGraphDev.cpp  ttkExtremeGraphDev.h  vtk.module
data/: scalar_field_v1.vti  scalar_field_v2.vti  scalar_field_v3.vti  testdata_create_withsaddlecheck.py
preprocess/: preprocess_vti.py  preprocess_vtu.py
